bernstein/result/result.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: result
spec:
  serviceName: result
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: epitechcontent/t-dop-600-result:k8s
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 128M
